# sdm-eurec4a-CLEO

./: CMakeLists.txt  README.md  cog.toml  environment.yml  pyproject.toml
.github/workflows/: CI.yml  build.yml
docs/source/usage/: examples.rst  good_coding.rst  installation.rst
examples/: CMakeLists.txt  run_example_levante.sh
examples/eurec4a1d/: build_compile_run_eurec4a1d.sh  create_model_input_files.sh  eurec4a1d.sh
examples/eurec4a1d/default_config/: eurec4a1d_config.yaml  eurec4a1d_config_evolving.yaml  eurec4a1d_config_original.yaml  eurec4a1d_config_stationary.yaml
examples/eurec4a1d/scripts/: create_model_input_mpi4py.py  debug_individual_run_CLEO.sh  execute_single_run.sh  run_job_array_eurec4a1d.sh  update_config_files.py  update_config_files.sh
pySD/thermobinary_src/: thermogen.py
scripts/levante/: build_compile_cleo.sh  compile_run_cleocoupledsdm.sh  inputfiles.sh  run_example.sh  sbatch_allexamples.sh
scripts/levante/bash/: compile_cleo.sh  install_yac.sh  run_cleo.sh
