[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name="pySD"
version="0.1.0"
authors= [
    {name = "Clara Bayley"},
    {name = "Nils Niebaum"},
]
dependencies = [
    "numpy>=1.21.2",
    "sphinx",
    "matplotlib",
]

[project.urls]
homepage = "https://github.com/yoctoyotta1024/sdm-eurec4a-CLEO"
issues = "https://github.com/yoctoyotta1024/sdm-eurec4a-CLEO/issues"

[project.optional-dependencies]
test = ["numpy>=1.21.2","pytest",]
docs = ["numpy>=1.21.2","sphinx",]

[tool.interrogate]
# tool to check code documentation
# https://interrogate.readthedocs.io/en/latest/
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = false
fail-under = 90
exclude = ["setup.py", "docs", "tests", "data", "notebooks", "temporary"]
verbose = 1
quiet = false
color = true

[tool.isort]
known_third_party = ["click", "pytest", "sdm_eurec4a"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
# only test the root level, otherwise it picks up the tests of the project template
testpaths = ["tests",]

[tool.black]
line-length = 105
target-version = ['py311']

[tool.docformatter]
black = true
in-place = true
pre-summary-newline = true

# [tool.flake8]
# max-line-length = 105
# extend-ignore = "E203, W503, E501, E712, F401"
# select = ["C", "E", "F", "W", "B", "B950"]
